[package]
name = "image_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-tungstenite = "*"
tungstenite = "*"
futures-channel = "*"
futures-util = "*"
futures = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
image = "*"
webp = "*"
once_cell = "*"
async-trait = "*"
lazy_static = "*"
log = "*"

[dependencies.axum]
version = "*"
features = ["ws"]

[dependencies.flexi_logger]
version = "*"
features = ["colors", "async"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.rusqlite]
version = "*"
features = ["bundled"]

[build-dependencies]
